0.0444 2019-11-12
  - remove no needed SPVM::IO::File::EOF
0.0443 2019-11-08
  - warn become keyword and add file and line number to the last of the message.
  - rename many Native APIs
0.0442 2019-10-21
  - add ctype.h function to SPVM::CORE
    isalnum
    isalpha
    isblank
    iscntrl
    isdigit
    isgraph
    islower
    isprint
    ispunct
    isspace
    isupper
    isxdigi
    tolower
    toupper
  - add SPVM::CORE random method
  - move strerror to SPVM::Errno
  - strerror become thread safe
  - Windows has no SIGPIPE
  
0.0441 2019-10-11
  - add pi method to SPVM::Math
  - cleanup SPVM::Unicode. Many methods is remaned.
  - cleanup SPVM::JSON. Many options is removed.
  - cleanup SPVM::Regex.
  - SPVM::Regex::caps method return captured string array.
  - SPVM::Regex::remove match_end method
  - add SPVM::Regex::match_length method
  - SPVM::Regex::replace method is separated to replace and replace_cb
  - SPVM::Regex::replace_all method is separated to replace_all and replace_all_cb
  - SPVM::Regex::match_offset is merged to SPVM::Regex::match
  - remove call_sub_depth and remove deep recursion check.
  - rename chomp to chompr
  - renmae complex_array to complex_darray
  - rename complex to complexd
  - move SPVM::CORE::copy_oarray to SPVM::Util::copy_oarray.
  - add SPVM::Cloner
  - SPVM::Util::copy_oarray do deep clone using SPVM::Cloner.
  - SPVM::Stringer argument change ($self : self) to ($self : self, $obj : object)
  - add SPVM::Regex::Replacer and use this in SPVM::Regex::replace_cb and SPVM::Regex::replace_all_cb method
  - subroutine belongging to package with callback_t descriptor must be anon subroutine.
  - add SPVM::EqualityChecker
  - add SPVM::EqualityChecker::Address
  - SPVM::CORE::equals_oarray is moved to SPVM::Util and recieve SPVM::EqualityChecker as third argument
0.0440 2019-09-06
  - Rename SPVM::Data to SPVM::BlessedObject
  - Rename SPVM::Data::Array to SPVM::BlessedObject::Array