@@ -156,10 +156,6 @@ lib/SPVM/Errno.config
 lib/SPVM/Errno.pm
 lib/SPVM/Errno.spvm
 lib/SPVM/ExchangeAPI.pm
-lib/SPVM/FileHandle.c
-lib/SPVM/FileHandle.config
-lib/SPVM/FileHandle.pm
-lib/SPVM/FileHandle.spvm
 lib/SPVM/Float.pm
 lib/SPVM/Float.spvm
 lib/SPVM/FloatList.pm
@@ -187,7 +183,12 @@ lib/SPVM/IO/ClientSocketTCP.config
 lib/SPVM/IO/ClientSocketTCP.spvm
 lib/SPVM/IO/File.c
 lib/SPVM/IO/File.config
+lib/SPVM/IO/File.pm
 lib/SPVM/IO/File.spvm
+lib/SPVM/IO/FileHandle.c
+lib/SPVM/IO/FileHandle.config
+lib/SPVM/IO/FileHandle.pm
+lib/SPVM/IO/FileHandle.spvm
 lib/SPVM/IO/Select.c
 lib/SPVM/IO/Select.config
 lib/SPVM/IO/Select.spvm
@@ -471,7 +472,6 @@ t/default/lib/TestCase/Lib/SPVM/CORE.spvm
 t/default/lib/TestCase/Lib/SPVM/Double.spvm
 t/default/lib/TestCase/Lib/SPVM/DoubleList.spvm
 t/default/lib/TestCase/Lib/SPVM/Errno.spvm
-t/default/lib/TestCase/Lib/SPVM/FileHandle.spvm
 t/default/lib/TestCase/Lib/SPVM/Float.spvm
 t/default/lib/TestCase/Lib/SPVM/FloatList.spvm
 t/default/lib/TestCase/Lib/SPVM/Hash.spvm
@@ -484,6 +484,7 @@ t/default/lib/TestCase/Lib/SPVM/Int.spvm
 t/default/lib/TestCase/Lib/SPVM/IntList.spvm
 t/default/lib/TestCase/Lib/SPVM/IO/ClientSocketTCP.spvm
 t/default/lib/TestCase/Lib/SPVM/IO/File.spvm
+t/default/lib/TestCase/Lib/SPVM/IO/FileHandle.spvm
 t/default/lib/TestCase/Lib/SPVM/IO/Select.spvm
 t/default/lib/TestCase/Lib/SPVM/Long.spvm
 t/default/lib/TestCase/Lib/SPVM/LongList.spvm
