@@ -1,17 +1,0 @@
-package SPVM::FileHandle;
-
-use SPVM 'SPVM::FileHandle';
-
-1;
-
-=head1 NAME
-
-SPVM::FileHandle - File handle
-
-=head1 SYNOPSYS
-  
-  use SPVM::FileHandle;
-
-=head1 DESCRIPTION
-
-L<SPVM::FileHandle> is file handle object for L<SPVM::IO::File>.
