@@ -1,0 +1,17 @@
+package SPVM::IO::FileHandle;
+
+use SPVM 'SPVM::IO::FileHandle';
+
+1;
+
+=head1 NAME
+
+SPVM::IO::FileHandle - File handle
+
+=head1 SYNOPSYS
+  
+  use SPVM::IO::FileHandle;
+
+=head1 DESCRIPTION
+
+L<SPVM::IO::FileHandle> is file handle object for L<SPVM::IO::File>.
