@@ -1,4 +1,0 @@
-package TestCase::Lib::SPVM::FileHandle {
-  use SPVM::FileHandle;
-}
-
