@@ -1,0 +1,4 @@
+package TestCase::Lib::SPVM::IO::FileHandle {
+  use SPVM::IO::FileHandle;
+}
+
