@@ -6,7 +6,7 @@ use warnings;
 
 use Test::More 'no_plan';
 
-use SPVM 'TestCase::Lib::SPVM::FileHandle';
+use SPVM 'TestCase::Lib::SPVM::IO::FileHandle';
 
 # Start objects count
 my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
